# Envoxel

./: .gitignore
project/: CMakeLists.txt
project/src/engine_model/_include/ecs/components/: CCmpRepository.hpp  ICmpRegistrator.hpp
project/src/engine_model/_include/serde/aggregate/: CFieldGetter.hpp  PFRFieldsGetter.hpp  PfrFieldsGetter.hpp
project/src/engine_model/_include/serde/deserialization/functions_generator/: AggregateDsrlzFuncGenerator.hpp  SimpleDsrlzFuncGenerator.hpp  gen_aggregate_dsrlz_func.hpp  gen_simple_dsrlz_func.hpp
project/src/engine_model/_include/serde/deserialization/mapper/: DsrlzFuncMapper.hpp  IDeserializationFunctionsMapper.hpp  IDsrlzFuncMapper.hpp  StringDeserializationFunctionsMapper.hpp  StringKeyDsrlzFuncMappers.hpp
project/src/engine_model/_include/serde/deserialization/mapper/aggregate/: AggregateDeserializerMapper.hpp
project/src/engine_model/_include/serde/deserialization/template_function/dsrlz/: Deserializer.hpp  deserialize.hpp  type_erased_dsrlz_func.hpp
project/src/engine_model/_include/serde/mapper/: ISerDeFuncMapper.hpp  SerDeFuncMapper.hpp
project/src/engine_model/_include/serde/serialization/aggregate/: CFieldGetter.hpp  PFRFieldsGetter.hpp
project/src/engine_model/_include/serde/serialization/aggregate/mapper/: AggregateSerializerMapper.hpp
project/src/engine_model/_include/serde/serialization/functions_generator/: gen_aggregate_srlz_func.hpp  gen_simple_type_srlz_func.hpp  generate_aggregate_srlz_function.hpp  generate_simple_type_srlz_function.hpp
project/src/engine_model/_include/serde/serialization/mapper/: ISerializationFunctionsMapper.hpp  ISrlzFuncMapper.hpp  SrlzFuncMapper.hpp  StringKeySrlzFuncMapper.hpp  StringSerializationFunctionsMapper.hpp
project/src/engine_model/_include/serde/serialization/mapper/aggregate/: AggregateSerializerMapper.hpp
project/src/engine_model/_include/serde/string_utils/floating_point/: floating_point_to_string.hpp
project/src/engine_model/_include/serde/string_utils/from_structure/: copy_quoted.hpp  extract_token.hpp  split_by_tokens_associative.hpp  split_by_tokens_pair.hpp  split_by_tokens_sequence.hpp
project/src/engine_model/_include/serde/string_utils/to_structure/: make_associative_structure_of_tokens.hpp  make_pair_of_tokens.hpp  make_sequence_of_tokens.hpp  make_token.hpp
project/src/engine_model/_include/serde/template_utils/: dependent_false_v.hpp
project/src/engine_model/_include/serde/type_erasure/: VoidPtrAny.hpp
project/src/engine_model/serde/deserialization/mapper/: StringDeserializationFunctionsMapper.cpp
project/src/engine_model/serde/serialization/mapper/: StringSerializationFunctionsMapper.cpp
project/src/engine_model/unit_tests/serde/aggregate/: PFRFieldsGetterTests.cpp
project/src/engine_model/unit_tests/serde/deserialization/functions_generator/: GenAggregateDsrlzFuncTests.cpp  GenSimpleTDsrlzFuncTests.cpp  SimpleDsrlzFuncGenerator.cpp
project/src/engine_model/unit_tests/serde/deserialization/mapper/: DsrlzFuncMapperTests.cpp  StringDeserializationFunctionsMapperTeset.cpp
project/src/engine_model/unit_tests/serde/mapper/: SerDeFuncMapperTests.cpp
project/src/engine_model/unit_tests/serde/serialization/aggregate/: AggregateSerializerTest.cpp  PFRFieldsGetterTests.cpp
project/src/engine_model/unit_tests/serde/serialization/functions_generator/: GenAggregateSrlzFuncTests.cpp  GenSimpleTSrlzFuncTests.cpp
project/src/engine_model/unit_tests/serde/serialization/mapper/: StringSerializationFunctionsMapperTests.cpp
(+28 files in other folders)
